tests/ui/openapi_type_unknown_key.stderr
error: Unknown key
 --> $DIR/openapi_type_unknown_key.rs:6:12
  |
6 |     #[openapi(like = "pizza")]
  |               ^^^^
